// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot with all props 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  border-color: #fbc120;
  border-style: solid;
  border-width: 1px;
  background-color: #fcf3dc;
  color: #7a6322;
  padding-bottom: 14px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 14px;
  white-space: pre-wrap;
}

.c1 {
  margin-top: 40px;
}

<div
  className={undefined}
>
  <div
    className="c0"
  >
    Something is wrong
  </div>
  <div
    className="c1"
  >
    <div
      className={null}
      style={Object {}}
    >
      SelectableList(undefined)
    </div>
  </div>
</div>
`;

exports[`basic snapshot with only required props 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  border-color: #fbc120;
  border-style: solid;
  border-width: 1px;
  background-color: #fcf3dc;
  color: #7a6322;
  padding-bottom: 14px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 14px;
  white-space: pre-wrap;
}

.c1 {
  margin-top: 40px;
}

<div
  className={undefined}
>
  <div
    className="c0"
  >
    The address you entered may be incorrect or incomplete.

Please review our suggestion below, and choose which version you’d like to use. Errors are shown in red.
  </div>
  <div
    className="c1"
  >
    <div
      className={null}
      style={Object {}}
    >
      SelectableList(undefined)
    </div>
  </div>
</div>
`;
